--- a/Week 3 ex/nested list.html
+++ b/Week 3 ex/nested list.html
@@ -21,4 +21,9 @@
         <li> Nested item 2.3</li>
     </ol>
     </li>
+    <li> List item 3</li>
+    <ul type = "circle">
+        <li> Nested item 3.1</li>
+        <li> Nested item 3.2</li>
+        <li> Nested item 3.3</li>
 </ol>
