--- a/Week 3 ex/To do list.html
+++ b/Week 3 ex/To do list.html
@@ -5,7 +5,7 @@
         <div class = "my-list">
             <h1>Today's to do list</h1>
             <p>Mittwoch, 5. Maerz</p>
-            <ol> yess </ol>ol
+            <ol type = "number">
                 <li>Lerne leiden ohne zu klagen</li>
                 <li>Vertrauem ist gut</li>
                 <li>Kontrolle ist besser</li>
