file structure reimagined

--- a/week3/cv.html
+++ b/week3/cv.html
@@ -2,32 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Reginald P. Snarkington - CV</title>
+    <title>Nate J. Higgers - CV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" href = "stylle.css">
 </head>
 <body>
     <header>
         <div>
-            <h1>Reginald P. Snarkington</h1>
+            <h1>Nate J. Higgers</h1>
             <p>Professional Procrastinator &amp; Occasional Web Developer</p>
         </div>
-        <img src = "image\favourite.jpg" alt = "Portrait of Reginal" class = "profile_pic"> 
+        <img src = "..\images\favourite.jpg" alt = "Portrait of Reginal" class = "profile_pic"> 
     </header>
     <main>
-        <section class="section contact">
+        <section class="contact">
             <strong>Email:</strong> nate.higgers@britmail.co.uk &nbsp;|&nbsp;
             <strong>Phone:</strong> +44 1234 567890 &nbsp;|&nbsp;
             <strong>Location:</strong> Lunden, UK
         </section>
-        <section class="section">
+        <section class="introducion">
             <h2>Profile</h2>
             <p>
-                Oh, hello there. I suppose you want to know about me. Well, I'm Reginald, but my friends call me "Snarky" (for reasons that will become painfully obvious). 
+                Oh, hello there. I suppose you want to know about me. Well, I'm Nathan, but my friends call me "Snarky" (for reasons that will become painfully obvious). 
                 I dabble in web development, mostly to avoid doing actual work. If you need someone who can turn coffee into code and sarcasm into solutions, look no further.
             </p>
         </section>
-        <section class="section">
+        <section class="skill">
             <h2>Skills</h2>
             <div class="skills">
                 <span>HTML5 (I know, shocking)</span>
@@ -40,7 +40,7 @@
                 <span>Procrastination (Gold medalist)</span>
             </div>
         </section>
-        <section class="section">
+        <section class="experience">
             <h2>Experience</h2>
             <ul>
                 <li>
@@ -70,7 +70,7 @@
                 </li>
             </ul>
         </section>
-        <section class="section">
+        <section class="education">
             <h2>Education</h2>
             <ul>
                 <li>
@@ -88,7 +88,7 @@
                 </li>
             </ul>
         </section>
-        <section class="section">
+        <section class="project">
             <h2>Projects</h2>
             <ul>
                 <li>
@@ -102,7 +102,7 @@
                 </li>
             </ul>
         </section>
-        <section class="section">
+        <section class="interest">
             <h2>Interests</h2>
             <ul>
                 <li>Drinking tea and judging people who put the milk in first.</li>
@@ -112,7 +112,7 @@
                 <li>Making sarcastic comments in meetings.</li>
             </ul>
         </section>
-        <section class="section">
+        <section class="ref">
             <h2>References</h2>
             <p>
                 Available upon request, assuming you really want to hear more sarcasm.
