--- a/weak4/bear.html
+++ b/weak4/bear.html
@@ -26,7 +26,7 @@
                 <li>Albania</li>
                 <li>Romania</li>
             </ol>
-            <img src = ".\bear.jpg" alt = "Brown Bear" class = "bear_pic">
+            <img src = "..\images\bear.jpg" alt = "Brown Bear" class = "bear_pic">
         </header>
     </body>
 </html>
