--- a/week3/cv.html
+++ b/week3/cv.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Nate J. Higgers - CV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "stylle.css">
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
     <header>
@@ -12,112 +12,119 @@
             <h1>Nate J. Higgers</h1>
             <p>Professional Procrastinator &amp; Occasional Web Developer</p>
         </div>
-        <img src = "..\images\favourite.jpg" alt = "Portrait of Reginal" class = "profile_pic"> 
+        <img src = "..\images\nate_higgers.jpg" alt = "Portrait of Reginal" class = "profile_pic"> 
     </header>
-    <main>
-        <section class="contact">
-            <strong>Email:</strong> nate.higgers@britmail.co.uk &nbsp;|&nbsp;
-            <strong>Phone:</strong> +44 1234 567890 &nbsp;|&nbsp;
-            <strong>Location:</strong> Lunden, UK
-        </section>
-        <section class="introducion">
-            <h2>Profile</h2>
-            <p>
-                Oh, hello there. I suppose you want to know about me. Well, I'm Nathan, but my friends call me "Snarky" (for reasons that will become painfully obvious). 
-                I dabble in web development, mostly to avoid doing actual work. If you need someone who can turn coffee into code and sarcasm into solutions, look no further.
-            </p>
-        </section>
-        <section class="skill">
-            <h2>Skills</h2>
-            <div class="skills">
-                <span>HTML5 (I know, shocking)</span>
-                <span>CSS3 (I can make things look less ugly)</span>
-                <span>JavaScript (I break things with style)</span>
-                <span>React (Because everyone else does)</span>
-                <span>Git (I commit my mistakes)</span>
-                <span>Python (For when I want to feel clever)</span>
-                <span>Making tea (British level: expert)</span>
-                <span>Procrastination (Gold medalist)</span>
-            </div>
-        </section>
-        <section class="experience">
-            <h2>Experience</h2>
-            <ul>
-                <li>
-                    <span class="job-title">Senior Web Developer</span> – <em>Snarky Solutions Ltd.</em> (2021–Present)<br>
-                    <ul>
-                        <li>Led a team of developers who were almost as sarcastic as me.</li>
-                        <li>Built websites that occasionally worked on Internet Explorer (miracles do happen).</li>
-                        <li>Implemented features nobody asked for, but everyone pretended to like.</li>
-                        <li>Held meetings that could have been emails.</li>
-                    </ul>
-                </li>
-                <li>
-                    <span class="job-title">Junior Web Developer</span> – <em>Tea & Biscuits Web Agency</em> (2018–2021)<br>
-                    <ul>
-                        <li>Spent most of my time fixing bugs I created myself.</li>
-                        <li>Mastered the art of looking busy while scrolling Stack Overflow.</li>
-                        <li>Created a revolutionary "404 page" that made people laugh and cry.</li>
-                    </ul>
-                </li>
-                <li>
-                    <span class="job-title">Intern</span> – <em>Big Ben Digital</em> (2017–2018)<br>
-                    <ul>
-                        <li>Made tea for the entire office (and occasionally wrote some code).</li>
-                        <li>Learned that "agile" means "change everything every week".</li>
-                        <li>Survived three months without breaking the production site (barely).</li>
-                    </ul>
-                </li>
-            </ul>
-        </section>
-        <section class="education">
-            <h2>Education</h2>
-            <ul>
-                <li>
-                    <span class="edu-title">BSc in Computer Science</span> – <em>University of Sarcasm, London</em> (2014–2017)<br>
-                    <ul>
-                        <li>Graduated with honours (and a healthy dose of cynicism).</li>
-                        <li>Thesis: "Why Do Websites Break Right Before Deadlines?"</li>
-                    </ul>
-                </li>
-                <li>
-                    <span class="edu-title">A-Levels</span> – <em>Snarkington College</em> (2012–2014)<br>
-                    <ul>
-                        <li>Computer Science, English Literature, Tea Brewing</li>
-                    </ul>
-                </li>
-            </ul>
-        </section>
-        <section class="project">
-            <h2>Projects</h2>
-            <ul>
-                <li>
-                    <strong>Snarky Portfolio</strong> – A personal website showcasing my questionable design choices and witty banter.
-                </li>
-                <li>
-                    <strong>TeaTimer App</strong> – Because knowing when your tea is ready is more important than deadlines.
-                </li>
-                <li>
-                    <strong>404 Comedy Club</strong> – A collection of the funniest error pages on the web (because if you can't fix it, laugh at it).
-                </li>
-            </ul>
-        </section>
-        <section class="interest">
-            <h2>Interests</h2>
-            <ul>
-                <li>Drinking tea and judging people who put the milk in first.</li>
-                <li>Watching football and pretending to understand the offside rule.</li>
-                <li>Collecting novelty mugs (current count: 42).</li>
-                <li>Writing code that works (occasionally).</li>
-                <li>Making sarcastic comments in meetings.</li>
-            </ul>
-        </section>
-        <section class="ref">
-            <h2>References</h2>
-            <p>
-                Available upon request, assuming you really want to hear more sarcasm.
-            </p>
-        </section>
-    </main>
+   <main>
+    <section class="contact">
+        <span><strong>Email:</strong> le.hongquang.0212@gmail.com</span>
+        <span><strong>Phone:</strong> 0869 600 493</span>
+        <span><strong>Location:</strong> Cầu Giấy, Hà Nội</span>
+    </section>
+
+    <section class="introducion">
+        <h2>Profile</h2>
+        <p>
+            My name is Lê Hồng Quang — university student by title, visual alchemist by trade. With over two years of experience wrestling pixels and timelines into cinematic submission, I’ve conjured content from the pits of social media chaos to the polite halls of creative side projects. A fast learner, a trend whisperer, and a devout worshipper at the altar of the Almighty Deadline. One mustn’t offend the Deadline. The Deadline sees all.
+        </p>
+    </section>
+
+    <section class="skill">
+        <h2>Skills</h2>
+        <div class="skills">
+            <span>Adobe Premiere Pro (wizard-level)</span>
+            <span>After Effects (summoner of keyframes)</span>
+            <span>DaVinci Resolve (for when I want things to look expensive)</span>
+            <span>Photoshop (pixel sorcery)</span>
+            <span>Illustrator (vector victimizer)</span>
+            <span>Canva (for rapid meme deployment)</span>
+            <span>Smooth Cutting & Colour Grading</span>
+            <span>Motion Graphics (intros, outros, and other magical whooshes)</span>
+            <span>Audio Tinkering (just enough not to cause ear trauma)</span>
+            <span>Social Media Witchcraft (TikTok, Reels, Shorts)</span>
+            <span>Basic Cinematography (lights, camera, mild competence)</span>
+            <span>Print Design (business cards, packaging, banners — the lot)</span>
+            <span>Workflow Sorcery (Trello, Google Drive, caffeinated teamwork)</span>
+            <span>Languages: Vietnamese (native), English (enough to survive YouTube tutorials)</span>
+        </div>
+    </section>
+
+    <section class="experience">
+        <h2>Experience</h2>
+        <ul>
+            <li>
+                <span class="job-title">Designer</span> – <em>FSoft</em> (June 2020 – December 2020)<br>
+                <ul>
+                    <li>Crafted internal documents and infographics with elegance befitting a dusty boardroom.</li>
+                    <li>Designed interfaces so simple even a distracted executive might find them usable.</li>
+                    <li>Collaborated with developers to ensure designs weren’t entirely ignored.</li>
+                </ul>
+            </li>
+
+            <li>
+                <span class="job-title">Designer & Video Editor</span> – <em>District 2 Cakes</em> (January 2021 – May 2021)<br>
+                <ul>
+                    <li>Filmed and edited videos that made even cupcakes look dramatic.</li>
+                    <li>Designed posters, banners, and social media content full of whimsy and relatability.</li>
+                </ul>
+            </li>
+
+            <li>
+                <span class="job-title">Designer</span> – <em>CK Print House</em> (May 2021 – May 2023)<br>
+                <ul>
+                    <li>Created printed matter ranging from business cards to industrial-scale banners.</li>
+                    <li>Communicated directly with clients — a noble battle of vision versus budget.</li>
+                    <li>Mastered the sacred rituals of real-world printing.</li>
+                </ul>
+            </li>
+
+            <li>
+                <span class="job-title">Designer & Video Editor</span> – <em>Kskull</em> (July 2023 – December 2023)<br>
+                <ul>
+                    <li>Crafted branded videos that attempted to sell both products *and* vibes.</li>
+                    <li>Designed trendy visuals and short-form content aimed at algorithmic favour.</li>
+                    <li>Operated at the dangerous intersection of creativity and internet humour.</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
+    <section class="education">
+        <h2>Education</h2>
+        <ul>
+            <li>
+                <span class="edu-title">Bachelor's Degree</span> – <em>Vietnam National University, Hanoi</em> (August 2020 – Present)<br>
+                <ul>
+                    <li>Studied the noble art of pretending to pay attention in lectures while editing videos on the side.</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
+    <section class="project">
+        <h2>Languages</h2>
+        <ul>
+            <li><strong>Vietnamese:</strong> Native tongue, wielded with the precision of a bamboo ruler.</li>
+            <li><strong>English:</strong> Sufficient to comprehend briefs, decipher memes, and survive international tutorials.</li>
+        </ul>
+    </section>
+
+    <section class="interest">
+        <h2>Interests</h2>
+        <ul>
+            <li>Whispering to Adobe software until it does my bidding.</li>
+            <li>Turning coffee into rough cuts.</li>
+            <li>Collecting online folders of reference material I’ll never use.</li>
+            <li>Fighting TikTok compression like it insulted my ancestors.</li>
+            <li>Rewatching the same five editing tutorials instead of sleeping.</li>
+        </ul>
+    </section>
+
+    <section class="ref">
+        <h2>References</h2>
+        <p>
+            Available upon request — though beware, they may tell you I'm “alarmingly efficient” and “worryingly enthusiastic about transitions.”
+        </p>
+    </section>
+</main>
 </body>
 </html>
