--- a/weak6/paragraph-project.html
+++ b/weak6/paragraph-project.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>The priority of selectora</title> 
+        <title>The priority of selector</title> 
         <style type="text/css">
             * {font: 20px "Comic Sans MS";}
             MyCustomizeTag{
